Conduct and act on minor usability checks, fix broken CSS in settings menu forms, fix 'last login' not updating on OAuth2 login, replace inline style tag in login menu with CSS rule, unify animations for dialog boxes in quantec menu and settings menu.

--- a/Frontend/QuanTec Overwatch Frontend/src/pages/Login.css
+++ b/Frontend/QuanTec Overwatch Frontend/src/pages/Login.css
@@ -126,6 +126,10 @@
   background-color: #3845D2;
 }
 
+.loginMenuDiscordIcon {
+  margin-right: 10px;
+}
+
 .loginReferralReason {
   margin-top: 50px;
   border: 2px solid whitesmoke;
